<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="device_title">Device Extras</string>
    <string name="device_summary">Adjust device specific settings</string>

    <!-- Display modes -->
    <string name="display_title">Display modes</string>
    <string name="display_summary">Adjust settings and preferences for display</string>
    <string name="srgb_mode_summary"></string>
    <string name="srgb_mode_title">sRGB mode</string>
    <string name="hbm_mode_summary"></string>
    <string name="hbm_mode_title">High brightness mode</string>
    <string name="auto_hbm_summary"></string>
    <string name="hbm_mode_warning">Long time usage of High brightness mode may damage your display</string>
    <string name="auto_hbm_title">Automatic High brightness mode</string>
    <string name="auto_hbm_threshold_title">Automatic High brightness mode threshold (lux)</string>
    <string name="auto_hbm_threshold_summary"></string>
    <string name="dc_mode_summary"></string>
    <string name="dc_mode_title">DC-Dimming</string>
    <string name="dci_mode_summary"></string>
    <string name="dci_mode_title">DCI-P3 wide colour gamut mode</string>
    <string name="wide_mode_summary"></string>
    <string name="wide_mode_title">Wide colour mode</string>
    <string name="panel_category_title">Panel modes</string>
    <string name="panel_category_summary">Modes for panel color correction</string>
    <string name="off_mode_title">Off</string>
    <string name="tile_panel_mode">Panel modes</string>
    <string name="tile_hbm_mode">High brightness modes</string>
    <string name="tile_dc_mode">DC-Dimming</string>

    <!-- Screen off Gestures : Input -->
    <string name="touchscreen_gesture_settings_title">Touchscreen gestures</string>
    <string name="touchscreen_gesture_settings_summary">Perform various touchscreen gestures for quick actions</string>
    <string name="touchscreen_gestures_haptic_feedback_title">Haptic feedback</string>
    <string name="touchscreen_gestures_haptic_feedback_summary">Vibrate when a touchscreen gesture is detected</string>
    <string name="touchscreen_gesture_two_finger_down_swipe_title">Swipe down with two fingers</string>
    <string name="touchscreen_gesture_one_finger_up_swipe_title">Swipe up with one finger</string>
    <string name="touchscreen_gesture_one_finger_up_swipe_home_title">Swipe up from the home button</string>
    <string name="touchscreen_gesture_one_finger_down_swipe_title">Swipe down with one finger</string>
    <string name="touchscreen_gesture_one_finger_left_swipe_title">Swipe left with one finger</string>
    <string name="touchscreen_gesture_one_finger_right_swipe_title">Swipe right with one finger</string>
	<string name="touchscreen_gesture_single_tap_title">Single tap</string>
    <string name="touchscreen_gesture_up_arrow_title">Draw a \"Λ\"</string>
    <string name="touchscreen_gesture_down_arrow_title">Draw a \"V\"</string>
    <string name="touchscreen_gesture_left_arrow_title">Draw a \"&lt;\"</string>
    <string name="touchscreen_gesture_right_arrow_title">Draw a \"&gt;\"</string>
    <string name="touchscreen_gesture_letter_c_title">Draw the letter \"C\"</string>
    <string name="touchscreen_gesture_letter_e_title">Draw the letter \"e\"</string>
    <string name="touchscreen_gesture_letter_o_title">Draw the letter \"O\"</string>
    <string name="touchscreen_gesture_letter_m_title">Draw the letter \"M\"</string>
    <string name="touchscreen_gesture_letter_s_title">Draw the letter \"S\"</string>
    <string name="touchscreen_gesture_letter_v_title">Draw the letter \"V\"</string>
    <string name="touchscreen_gesture_letter_w_title">Draw the letter \"W\"</string>
    <string name="touchscreen_gesture_letter_z_title">Draw the letter \"Z\"</string>
	
    <!-- Screen off Gestures : Actions -->
    <string name="touchscreen_gesture_action_dialog_title">Gesture action</string>
    <string name="touchscreen_gesture_action_do_nothing">Do nothing</string>
    <string name="touchscreen_gesture_action_flashlight">Toggle flashlight</string>
    <string name="touchscreen_gesture_action_camera">Open the camera</string>
    <string name="touchscreen_gesture_action_browser">Open the browser</string>
    <string name="touchscreen_gesture_action_dialer">Open the dialer</string>
    <string name="touchscreen_gesture_action_email">View your emails</string>
    <string name="touchscreen_gesture_action_messages">View your messages</string>
    <string name="touchscreen_gesture_action_play_pause_music">Play/pause music</string>
    <string name="touchscreen_gesture_action_previous_track">Play the previous music track</string>
    <string name="touchscreen_gesture_action_next_track">Play the next music track</string>
    <string name="touchscreen_gesture_action_volume_down">Lower media volume</string>
    <string name="touchscreen_gesture_action_volume_up">Raise media volume</string>
	<string name="touchscreen_gesture_action_ambient_display">Show ambient display</string>

    <!-- Doze -->
    <string name="doze_panel_title">Doze</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="doze_settings_help_title">Help</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>
    <string name="dialog_ok">OK</string>
    <string name="switch_bar_off">Off</string>
    <string name="switch_bar_on">On</string>
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_always_on_title">Always on</string>
    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="raise_to_wake_gesture_title">Raise to wake</string>
    <string name="raise_to_wake_gesture_summary">Wake up the device instead of pulsing notification</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    <!-- FPS info -->
    <string name="fps_title">Measured FPS</string>
    <string name="fps_info_title">FPS overlay</string>
    <string name="fps_info_summary">Show overlay with with current frames per second</string>

    <!-- Notification slider -->
    <string name="notification_slider_title">Notification slider</string>
    <string name="notification_slider_selection_dialog_title">Action</string>
    <string name="notification_slider_top_position">Top position</string>
    <string name="notification_slider_middle_position">Middle position</string>
    <string name="notification_slider_bottom_position">Bottom position</string>
    <string name="notification_slider_mode_total_silence">Total silence</string>
    <string name="notification_slider_mode_alarms_only">Alarms only</string>
    <string name="notification_slider_mode_priority_only">Priority only</string>
    <string name="notification_slider_mode_silent">Silent</string>
    <string name="notification_slider_mode_vibrate">Vibrate</string>
    <string name="notification_slider_mode_none">Normal</string>
    <string name="buttons_dashboard_summary">Alert Slider Settings</string>

    <!-- Vibration control -->
    <string name="vibrator_title">Vibrator</string>
    <string name="vib_strength_title_head">System Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="vib_call_strength_title_head">Call Strength</string>
    <string name="vib_call_strength_summary_head">Define the strength of the vibrator during an incoming call</string>
    <string name="vib_notif_strength_title_head">Notification Strength</string>
    <string name="vib_notif_strength_summary_head">Define the strength of the vibrator during an incoming notification</string>
    <string name="vibration_strength_warning">High vibration strength may damage your vibration motor</string>

    <!-- Slider toasts -->
    <string name="slider_toast_normal">Calls and notifications will ring</string>
    <string name="slider_toast_vibrate">Calls and notifications will vibrate</string>
    <string name="slider_toast_dnd">DND - No interruptions</string>
    <string name="slider_toast_priority">DND - Priority only</string>
    <string name="slider_toast_silent">Calls and notifications will be muted</string>

    <!-- Log Tile -->
    <string name="quick_settings_log_tile_label">LogTile</string>
    <string name="quick_settings_log_tile_dialog_title">Options</string>
    <string name="cannot_get_su">Action failed because of missing superuser access</string>
</resources>
